fixed border spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -137,7 +137,7 @@ a.brand-subtext{
 
 .home-widget-area{
   border-top: 1px solid #473924;
-  margin-top: 10px;
+  margin-top: 90px;
 }
 
 .home-widget{
